Enhance project with Supabase integration and logging
- Added Supabase configuration to .env.example and updated app/config.py for environment variables.
- Implemented Supabase client in app/db/supabase_client.py for database operations.
- Created database utility functions in app/db/utils.py for user, chat, and message management.
- Integrated logging setup in app/utils/logging.py for improved error tracking and debugging.
- Updated message handling in app/services/message_handler.py to utilize Supabase for user and chat creation.
- Enhanced webhook handling in app/routers/webhook.py with logging for better traceability.
- Updated requirements.txt to include Supabase SDK and added logs directory to .gitignore.
- Documented database schema in database/schema.sql and added architecture overview in docs/DATABASE.md.

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,8 @@
 # Your Telegram Bot Token (obtained from @BotFather)
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 
-# Note: WEBHOOK_URL is no longer needed - it's automatically detected from the request
-# when you call /setup-webhook using your public URL (e.g., ngrok URL)
+# Supabase Configuration
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your_anon_key
+SUPABASE_DB_URL=postgresql+asyncpg://postgres:[PASSWORD]@db.[PROJECT].supabase.co:5432/postgres
+
