--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.120.1
 uvicorn[standard]==0.24.0
 httpx==0.25.2
 python-dotenv==1.0.0
+supabase>=2.23.0
 
 # Development dependencies
 ruff>=0.1.0
