--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,4 @@ TELEGRAM_BOT_TOKEN=your_bot_token_here
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your_anon_key
 SUPABASE_DB_URL=postgresql+asyncpg://postgres:[PASSWORD]@db.[PROJECT].supabase.co:5432/postgres
-
+OPENAI_API_KEY=
