--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 fastapi==0.120.1
 uvicorn[standard]==0.24.0
-httpx==0.25.2
+httpx>=0.26.0,<0.29.0
 python-dotenv==1.0.0
 supabase>=2.23.0
+langchain>=0.3.0
+langchain-openai>=0.2.0
 
 # Development dependencies
 ruff>=0.1.0
