--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-fastapi==0.120.1
-uvicorn[standard]==0.24.0
-httpx>=0.26.0,<0.29.0
-python-dotenv==1.0.0
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+httpx>=0.28.0
+python-dotenv>=1.0.0
 supabase>=2.23.0
 langchain>=0.3.0
 langchain-openai>=0.2.0
+google-auth>=2.40.0
+google-auth-oauthlib>=1.2.0
+google-auth-httplib2>=0.2.0
+google-api-python-client>=2.150.0
 
 # Development dependencies
-ruff>=0.1.0
+ruff>=0.6.0
 
