--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv>=1.0.0
 supabase>=2.23.0
 langchain>=0.3.0
 langchain-openai>=0.2.0
+langsmith>=0.1.0
 google-auth>=2.40.0
 google-auth-oauthlib>=1.2.0
 google-auth-httplib2>=0.2.0
