--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 
 # Your Telegram Bot Token (obtained from @BotFather)
 TELEGRAM_BOT_TOKEN=your_bot_token_here
+TELEGRAM_WEBHOOK_SECRET=SECRET_TOKEN
 
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
