--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi>=0.115.0
 uvicorn[standard]>=0.32.0
 httpx>=0.28.0
 python-dotenv>=1.0.0
+python-multipart>=0.0.9
 supabase>=2.23.0
 langchain>=0.3.0
 langchain-openai>=0.2.0
